--- a/Sidebery-Sidebar.css
+++ b/Sidebery-Sidebar.css
@@ -74,25 +74,28 @@
 
 .Tab[data-active="true"] .body {box-shadow: none}
 
+.Tab .color-layer {display: none}
+
+.Tab[data-colorized]:has([style="--tab-color: #37adff;"]) .title {color: #37adff}
+.Tab[data-colorized]:has([style="--tab-color: #00c79a;"]) .title {color: #00c79a}
+.Tab[data-colorized]:has([style="--tab-color: #51cd00;"]) .title {color: #51cd00}
+.Tab[data-colorized]:has([style="--tab-color: #ffcb00;"]) .title {color: #ffcb00}
+.Tab[data-colorized]:has([style="--tab-color: #ff9f00;"]) .title {color: #ff9f00}
+.Tab[data-colorized]:has([style="--tab-color: #ff613d;"]) .title {color: #ff613d}
+.Tab[data-colorized]:has([style="--tab-color: #ff4bda;"]) .title {color: #ff4bda}
+.Tab[data-colorized]:has([style="--tab-color: #af51f5;"]) .title {color: #af51f5}
+
 .Tab .title {top: -1px}
 
 .Tab[data-pin="true"] .audio {
   background-color: transparent;
   box-shadow: none}
 
-.Tab .color-layer {
-  opacity: 1;
-  translate: 25px 14px;
-  width: 88%;
-  height: 4px;
-  filter: blur(6px);
-  z-index: 2}
+[data-frame-color-scheme=dark]  .ScrollBox > .top-shadow    {box-shadow: 0  1px 12px 0 #000}
+[data-frame-color-scheme=dark]  .ScrollBox > .bottom-shadow {box-shadow: 0 -1px 12px 0 #000}
 
-#root.root[data-frame-color-scheme=dark]  .ScrollBox > .top-shadow    {box-shadow: 0  1px 12px 0 #000}
-#root.root[data-frame-color-scheme=dark]  .ScrollBox > .bottom-shadow {box-shadow: 0 -1px 12px 0 #000}
-
-#root.root[data-frame-color-scheme=light] .ScrollBox > .top-shadow    {box-shadow: 0  1px 12px 0 #0004}
-#root.root[data-frame-color-scheme=light] .ScrollBox > .bottom-shadow {box-shadow: 0 -1px 12px 0 #0004}
+[data-frame-color-scheme=light] .ScrollBox > .top-shadow    {box-shadow: 0  1px 12px 0 #0004}
+[data-frame-color-scheme=light] .ScrollBox > .bottom-shadow {box-shadow: 0 -1px 12px 0 #0004}
 
 
 
