--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -14,15 +14,16 @@
 
   .wallpaper-attribution {display: none}
 
+  .top-site-outer .top-site-icon,
+  .top-site-outer .context-menu-button{
+    background-color: transparent !important}
+
   @media (prefers-color-scheme:dark) {
     .search-handoff-button,
     .top-site-outer .tile,
     .card-outer {
       background-color: hsla(252, 4%, 6%, 50%) !important;
       color: hsl(252, 4%, 95%) !important}
-    
-    .top-site-outer .top-site-icon,
-    .top-site-outer .context-menu-button{background-color: transparent !important}
     
     .top-sites-list:not(.dnd-active) .top-site-outer:is(.active, :focus, :hover) {background: hsla(252, 4%, 6%, 30%) !important}
     
@@ -37,6 +38,16 @@
       background: hsl(252, 4%, 9%) !important;
       border: 1px solid black !important}
 
-    .modalOverlayOuter {background: hsla(252, 4%, 6%, 50%)}
+    .modalOverlayOuter {background: hsla(252, 4%, 6%, 50%) !important}
   }
+
+  @media (prefers-color-scheme:light) {
+    .search-handoff-button,
+    .top-site-outer .tile,
+    .card-outer {
+      background-color: hsla(0, 0%, 100%, 60%) !important}
+    
+    .top-sites-list:not(.dnd-active) .top-site-outer:is(.active, :focus, :hover) {background: hsla(0, 0%, 100%, 50%) !important}
+  }
+  
 }
