--- a/Sidebery-GroupPage.css
+++ b/Sidebery-GroupPage.css
@@ -1,30 +1,5 @@
-#root[data-frame-color-scheme=dark] {
-  --s-toolbar-bg: #111 !important}
+#root[data-frame-color-scheme=dark] {--s-toolbar-bg: hsl(252, 4%, 9%) !important}
 
-html {
-  background-color: var(--s-toolbar-bg) !important}
-
-
-
+html {background-color: var(--s-toolbar-bg) !important}
 
 .title {opacity:.7}
-
-
-
-
-body[data-layout=grid] .tab[data-discarded=false]:not(:hover) .bg {
-  opacity: 1}
-
-body[data-layout=grid] .tab:not(:hover) .info,
-body[data-layout=grid] .tab:not(:hover) .ctrls .tab-btn {
-  opacity: 0}
-
-
-
-
-body[data-layout=list] .tab {
-  height: 96px}
-
-body[data-layout=list] .bg {
-  width: 171px;
-  height: 96px}
